--- a/app/src/main/res/layout/activity_widgets2.xml
+++ b/app/src/main/res/layout/activity_widgets2.xml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.user.allwidgets.Widgets2">
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/circularProgressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:progressTint="@color/colorAccent" />
-</android.support.v4.widget.NestedScrollView>
+        android:progressTint="@color/colorAccent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <ProgressBar
+        android:id="@+id/horizontalProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/circularProgressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="19dp" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/horizontalProgressBar"
+        android:layout_marginTop="41dp" />
+
+    <TextView
+        android:id="@+id/seekbarStatusText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/horizontalProgressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="SeekBar status: "
+        android:textAlignment="center" />
+</RelativeLayout>
