--- a/app/src/main/res/layout/activity_widgets2.xml
+++ b/app/src/main/res/layout/activity_widgets2.xml
@@ -71,19 +71,39 @@
         android:id="@+id/rateBarText"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_alignStart="@+id/seekBar"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/discreteSeekBar"
         android:layout_marginTop="21dp"
+        android:layout_toStartOf="@+id/ratingBar"
         android:gravity="center_vertical"
         android:text="Rate Me ( ͡° ͜ʖ ͡°)  "
         android:textAlignment="center"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/rateBarText"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@+id/rateBarText" />
+        android:layout_alignBottom="@+id/rateBarText"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/rateBarText" />
+
+    <Switch
+        android:id="@+id/switchLaLaLa"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ratingBar"
+        android:checked="true"
+        android:showText="true"
+        android:switchMinWidth="100dp"
+        android:text="Switch / Toggle : "
+        android:textColor="@android:color/black"
+        android:textOff="0"
+        android:textOn="1"
+        android:textSize="18sp"
+        android:thumbTint="@color/colorAccent" />
+
 </RelativeLayout>
