--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,20 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp">
     <TextView
         android:id="@+id/radio_prompt"
         android:layout_width="wrap_content"
@@ -13,15 +26,11 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="19dp"
         android:text="Is this necessary?"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
     <RadioGroup
         android:id="@+id/radiogroup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radio_prompt"
-        android:layout_alignStart="@+id/radio_prompt">
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/option1"
@@ -42,8 +51,6 @@
         android:id="@+id/check_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/radiogroup"
-        android:layout_below="@+id/radiogroup"
         android:layout_marginTop="14dp"
         android:text="I like :"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
@@ -53,56 +60,42 @@
         android:id="@+id/option_sherlock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/check_prompt"
-        android:layout_below="@+id/check_prompt"
         android:text="Sherlock" />
 
     <CheckBox
         android:id="@+id/option_mrrobot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/option_sherlock"
-        android:layout_below="@+id/option_sherlock"
         android:text="Mr. Robot" />
 
     <CheckBox
         android:id="@+id/option_scandal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/option_mrrobot"
-        android:layout_below="@+id/option_mrrobot"
         android:text="Scandal" />
 
     <CheckBox
         android:id="@+id/option_personOfInterest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/check_prompt"
-        android:layout_toEndOf="@+id/radio_prompt"
         android:text="Person of Interest" />
 
     <CheckBox
         android:id="@+id/option_lukecage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/option_personOfInterest"
-        android:layout_below="@+id/option_personOfInterest"
         android:text="Luke Cage" />
 
     <CheckBox
         android:id="@+id/option_strangerthings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/option_lukecage"
-        android:layout_below="@+id/option_lukecage"
         android:text="Stranger Things" />
 
     <CheckedTextView
         android:id="@+id/checkedTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/option_scandal"
-        android:layout_below="@+id/option_scandal"
         android:layout_marginTop="26dp"
         android:checkMark="@android:drawable/alert_dark_frame"
         android:checkMarkTint="@android:color/holo_green_light"
@@ -116,37 +109,111 @@
         android:id="@+id/spinner_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/checkedTextView"
-        android:layout_below="@+id/checkedTextView"
         android:layout_marginTop="13dp"
-        android:layout_toStartOf="@+id/option_strangerthings"
         android:text="I was born in : "
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
         android:textSize="18sp" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/spinner_prompt"
-        android:layout_toEndOf="@+id/option_lukecage" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Spinner
         android:id="@+id/spinner_month"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/spinner"
-        android:layout_toStartOf="@+id/spinner" />
-
-    <Button
-        android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:text="Go to the next part"
-        android:onClick="goToWidget2"/>
+        android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/circularProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/colorAccent"
+        android:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/horizontalProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="30"
+        android:progressTintMode="src_over"
+        android:layout_marginStart="10dp" />
+
+    <TextView
+        android:id="@+id/seekbarStatusText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="SeekBar status: "
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/discreteSeekbarStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="Discrete SeekBar status: "
+        android:textAlignment="center" />
+
+    <SeekBar
+        android:id="@+id/discreteSeekBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:max="10"
+        android:progress="3"
+        android:progressTint="@android:color/holo_red_dark"
+        android:progressTintMode="src_over"
+        android:thumb="@drawable/mark_red" />
+
+    <TextView
+        android:id="@+id/rateBarText"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="21dp"
+        android:gravity="center_vertical"
+        android:text="Rate Me ( ͡° ͜ʖ ͡°)  "
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content" />
+
+    <Switch
+        android:id="@+id/switchLaLaLa"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:checked="true"
+        android:showText="true"
+        android:switchMinWidth="100dp"
+        android:text="Switch / Toggle : "
+        android:textColor="@android:color/black"
+        android:textOff="0"
+        android:textOn="1"
+        android:textSize="18sp"
+        android:thumbTint="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/buttonGoToText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Click for NEXT"
+            android:onClick="goToNext"/>
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
