--- a/app/src/main/res/layout/list_children.xml
+++ b/app/src/main/res/layout/list_children.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="10dp">
+
+    <TextView
+        android:id="@+id/list_item_apple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Apple"
+        android:textAlignment="center"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/list_item_orange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Orange"
+        android:textAlignment="center"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/list_item_mango"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mango"
+        android:textAlignment="center"
+        android:padding="10dp"/>
 
 </LinearLayout>
