--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
-    <color name="myGreen">#00c853</color>
+    <color name="myGreen">#0ac800</color>
     <color name="myYellow">#fae43c</color>
 </resources>
