--- a/app/src/main/res/layout/activity_expandable_list_view_demo.xml
+++ b/app/src/main/res/layout/activity_expandable_list_view_demo.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.user.allwidgets.ExpandableListViewDemo">
 
+    <ExpandableListView
+        android:id="@+id/expandable_listview"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp" />
+
 </android.support.constraint.ConstraintLayout>
