--- a/app/src/main/res/layout/list_headers.xml
+++ b/app/src/main/res/layout/list_headers.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:textAlignment="center">
+
+    <TextView
+        android:id="@+id/header_fruits"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fruits"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/header_bakery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bakery"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
