--- a/app/src/main/res/layout/list_headers.xml
+++ b/app/src/main/res/layout/list_headers.xml
@@ -7,21 +7,20 @@
     android:textAlignment="center">
 
     <TextView
-        android:id="@+id/header_fruits"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fruits"
         android:gravity="center"
         android:padding="10dp"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/header_bakery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Bakery"
-        android:gravity="center"
-        android:padding="10dp"
-        android:textStyle="bold"/>
+    <!--<TextView-->
+        <!--android:id="@+id/header_bakery"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Bakery"-->
+        <!--android:gravity="center"-->
+        <!--android:padding="10dp"-->
+        <!--android:textStyle="bold"/>-->
 
 </LinearLayout>
