--- a/app/src/main/res/layout/activity_expandable_list_view_demo.xml
+++ b/app/src/main/res/layout/activity_expandable_list_view_demo.xml
@@ -8,8 +8,8 @@
 
     <ExpandableListView
         android:id="@+id/expandable_listview"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
