--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -27,10 +27,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:padding="5dp"
+        android:padding="10dp"
         android:background="@color/colorAccent"
-        android:text="Go To Exapndable List View"
+        android:text="Go To Expandable List View"
         android:textColor="@android:color/white"
+        android:textStyle="bold"
         android:onClick="goToExpandableListView"/>
 
 </android.widget.RelativeLayout>
