--- a/app/src/main/res/layout/list_headers.xml
+++ b/app/src/main/res/layout/list_headers.xml
@@ -3,16 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:textAlignment="center">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:padding="10dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textAllCaps="true"/>
 
     <!--<TextView-->
         <!--android:id="@+id/header_bakery"-->
