--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,16 @@
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="Divider">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">1dip</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="Divider_Invisible">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">1dip</item>
+    </style>
 
 </resources>
