--- a/app/src/main/res/layout/activity_expandable_list_view_demo.xml
+++ b/app/src/main/res/layout/activity_expandable_list_view_demo.xml
@@ -6,31 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.example.user.allwidgets.ExpandableListViewDemo">
 
-    <Button
-        android:id="@+id/buttonGoToTable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="100dp"
-        android:layout_marginBottom="100dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/myGreen"
-        android:gravity="center"
-        android:text="Go To Table"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:padding="10dp"
-        android:onClick="goToTable"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expandable_listview"
-        app:layout_constraintVertical_bias="0.53999996" />
+    <!--<Button-->
+        <!--android:id="@+id/buttonGoToTable"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="100dp"-->
+        <!--android:layout_marginBottom="100dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:background="@color/myGreen"-->
+        <!--android:gravity="center"-->
+        <!--android:onClick="goToTable"-->
+        <!--android:padding="10dp"-->
+        <!--android:text="Go To Table"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textStyle="bold"-->
+        <!--android:visibility="invisible"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.51"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/expandable_listview"-->
+        <!--app:layout_constraintVertical_bias="0.53999996" />-->
 
     <ExpandableListView
         android:id="@+id/expandable_listview"
         android:layout_width="wrap_content"
-        android:layout_height="350dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
